Prevent NPE